# keyhog

./: .gitignore  .keyhog.toml.example  .keyhogignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DETECTORS.md  Dockerfile  GPU_AUDIT.md  LICENSE  PRODUCTION_READINESS_AUDIT.md  README.md  SECURITY.md  SECURITY_AUDIT_RUTHLESS.md  audit.toml  findings.json  run_decoder
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  findings.json
crates/cli/src/: args.rs  baseline.rs  benchmark.rs  config.rs  inline_suppression.rs  lib.rs  main.rs  orchestrator.rs  orchestrator_config.rs  path_validation.rs  reporting.rs  sources.rs  utils.rs  value_parsers.rs
crates/cli/src/subcommands/: backend.rs  calibrate.rs  completion.rs  detectors.rs  diff.rs  explain.rs  hook.rs  mod.rs  scan.rs  scan_system.rs  watch.rs
crates/cli/tests/: all_tests.rs  break_it.rs  platform_compat.rs
crates/cli/tests/unit/: baseline.rs
crates/core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs  detectors
crates/core/detectors/: .keyhog-cache.json  4everland-api-token.toml  500px-api-key.toml  abuseipdb-api-key.toml  adp-api-credentials.toml  aerisweather-api-credentials.toml  agenta-api-key.toml  agora-app-credentials.toml  ai21-api-key.toml  airplane-api-key.toml  alertmanager-credentials.toml  algolia-api-key.toml  amazon-music-api-credentials.toml  apify-api-token.toml  appium-cloud-credentials.toml  apple-push-notification-key.toml  applitools-api-key.toml  appwrite-api-key.toml  asana-pat.toml  atlantis-credentials.toml  auth0-spa-credentials.toml  avalanche-api-credentials.toml  avaya-api-credentials.toml  aws-ecr-token.toml  aws-ses-smtp-credentials.toml  axiom-api-token.toml  azure-functions-key.toml  azure-government-credentials.toml  azure-key-vault-credentials.toml  azure-subscription-key.toml  backblaze-b2-app-key-v2.toml  bamboohr-api-key.toml  base-api-credentials.toml  basecamp-access-token.toml  baseten-api-key.toml  betterstack-source-token.toml  bitbucket-app-password.toml  bitquery-api-key.toml  bluejeans-api.toml  bluesky-app-password.toml  (+312 more)
crates/core/examples/: core_standalone.rs
crates/core/src/: allowlist.rs  auto_fix.rs  banner.rs  calibration.rs  config.rs  credential.rs  dedup.rs  encoding.rs  finding.rs  hardening.rs  lib.rs  merkle_index.rs  registry.rs  report.rs  rule_filter.rs  safe_bin.rs  source.rs  spec.rs
crates/core/src/report/: banner.rs  json.rs  sarif.rs  text.rs
crates/core/src/spec/: load.rs  validate.rs
crates/core/tests/: test_toml_compat.rs
crates/core/tests/adversarial/: mod.rs  path_traversal.rs
crates/core/tests/property/: serialization.rs
crates/core/tests/unit/: allowlist.rs  banner.rs  config.rs  dedup.rs  finding.rs  mod.rs  registry.rs  report.rs  spec.rs  validate.rs
crates/scanner/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  build.rs
crates/scanner/benches/: adversarial.rs  alphabet.rs  compile_time.rs  confidence.rs  decode.rs  edge_cases.rs  entropy.rs  scan_throughput.rs  size_pattern_sweep.rs  throughput.rs
crates/scanner/benches/throughput_cases/: fixtures.rs  groups.rs  latency.rs  memory.rs  pem.rs  pipeline.rs  throughput.rs
crates/scanner/examples/: real_tree_benchmark.rs  scanner_standalone.rs
crates/scanner/src/: adversarial_tests.rs  alphabet_filter.rs  bigram_bloom.rs  compiler.rs  compiler_prefix.rs  confidence.rs  context.rs  decode.rs  decode_impl.rs  entropy.rs  entropy_avx512.rs  entropy_fast.rs  error.rs  fragment_cache.rs  gpu.rs  gpu_shader.rs  homoglyph.rs  hw_probe.rs  jwt.rs  lib.rs  ml_features.rs  ml_scorer.rs  ml_scorer_tests.rs  ml_weights.rs  multiline.rs  pipeline.rs  prefix_trie.rs  probabilistic_gate.rs  resolution.rs  simd.rs  simdsieve_prefilter.rs  static_intern.rs  types.rs  unicode_hardening.rs
crates/scanner/src/checksum/: github.rs  gitlab.rs  mod.rs  npm.rs  slack.rs  stripe.rs  tests.rs
crates/scanner/src/confidence/: mod.rs  penalties.rs  prefixes.rs  signals.rs
crates/scanner/src/context/: context_tests.rs  documentation.rs  false_positive.rs  inference.rs  mod.rs
crates/scanner/src/decode/: base64.rs  caesar.rs  hex.rs  hex_escape.rs  json.rs  mod.rs  pipeline.rs  reverse.rs  unicode_escape.rs  url.rs
crates/scanner/src/engine/: backend.rs  boundary.rs  fallback.rs  fallback_entropy.rs  fallback_generic.rs  hot_patterns.rs  megakernel_dispatch.rs  mod.rs  scan.rs  scan_filters.rs  scan_gpu.rs  segment_attribution.rs  windowed.rs
crates/scanner/src/entropy/: entropy_tests.rs  keywords.rs  mod.rs  scanner.rs
crates/scanner/src/multiline/: config.rs  fragment_cache.rs  mod.rs  preprocessor.rs  structural.rs  tests.rs
crates/scanner/src/structured/: mod.rs  parsers.rs
crates/scanner/tests/: gpu_parity.rs  megakernel_parity.rs  oom_test.rs  performance_regression.rs  platform_compat.rs  timeout_test.rs  window_boundary.rs
crates/scanner/tests/adversarial/: engine.rs
crates/scanner/tests/integration/: gpu.rs  mod.rs
crates/scanner/tests/property/: decode.rs  mod.rs  scanner_fuzz.rs
crates/scanner/tests/unit/: alphabet_filter.rs  checksum.rs  confidence.rs  confidence_penalties.rs  confidence_prefixes.rs  confidence_signals.rs  context.rs  decode.rs  engine_backend.rs  entropy.rs  entropy_fast.rs  flaw_investigation.rs  hw_probe.rs  ml_scorer.rs  mod.rs  multiline.rs  prefix_trie.rs  resolution.rs  segment_attribution.rs  unicode_hardening.rs
crates/sources/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
crates/sources/examples/: sources_standalone.rs
crates/sources/src/: binary.rs  docker.rs  filesystem.rs  git.rs  git_diff.rs  git_history.rs  github_org.rs  lib.rs  s3.rs  slack.rs  stdin.rs  strings.rs  timeouts.rs  web.rs
crates/sources/tests/: all_tests.rs
crates/verifier/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
crates/verifier/examples/: verifier_standalone.rs
crates/verifier/src/: cache.rs  domain_allowlist.rs  interpolate.rs  lib.rs  rate_limit.rs  ssrf.rs  verify.rs
crates/verifier/tests/: break_it.rs
fuzz/: Cargo.toml
(+883 files in other folders)
