[package]
name = "keyhog-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
repository = "https://github.com/santhsecurity/keyhog"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.keyhog-core]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_target"
path = "fuzz_targets/decode_target.rs"
test = false
doc = false
bench = false
