[package]
name = "keyhog-core"
description = "Core types, traits, and detector specs for the secret scanner"
version = "0.2.1"
edition = "2024"
authors = ["Corum Collective LLC <contact@santh.io>"]
license = "MIT"
repository = "https://github.com/santhsecurity/keyhog"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
regex = "1"
regex-syntax = "0.8"
sha2 = "0.10"
rayon = "1"
hex = "0.4"
once_cell = "1.21.4"
async-trait = "0.1.89"
serde_with = "3.18.0"
parking_lot = "0.12.5"
anyhow.workspace = true

[dev-dependencies]
proptest = "1.11.0"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
