[package]
name = "keyhog-core"
description = "keyhog-core — shared data model and detector specifications for the KeyHog secret scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-core"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
serde_with = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
anyhow.workspace = true
# Used for atomic-rename writes of `merkle.idx` and `calibration.json`
# via `NamedTempFile::persist()`. The Drop impl deletes the tmp on
# panic between create and rename, so a partial save doesn't leak a
# stale `tmp.NNN` next to the real cache file.
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
