[package]
name = "keyhog-verifier"
description = "Async parallel credential verification engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["live"]
live = []

[dependencies]
keyhog-core = { workspace = true }
stealthreq = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
dashmap = "6.1.0"
futures-util = "0.3"

# AWS SigV4 signing for credential verification

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
