[package]
name = "keyhog-verifier"
description = "Async parallel credential verification engine"
version = "0.2.0"
edition = "2024"
authors = ["Corum Collective LLC <contact@santh.io>"]
license = "MIT"
repository = "https://github.com/santhsecurity/keyhog"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = ["live"]
live = []

[dependencies]
keyhog-core = { path = "../core" }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
percent-encoding = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
futures-util = "0.3"
codewalk = "0.2"
lazy_static = "1.5.0"
parking_lot = "0.12.5"
url = "2.5.8"

# AWS SigV4 signing for credential verification

[dev-dependencies]
rusty-fork = "0.3.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
